--- a/CAPOL_WEB_UI/CAPOL_WEB_UI.css
+++ b/CAPOL_WEB_UI/CAPOL_WEB_UI.css
@@ -1,3 +1,4 @@
+body{ font-size:12px; }
 .disabled{color:#777 !important;}
 .top_banner{background-color: #fff;height:80px;border-bottom: 1px solid #ccc;}
 .navigate{width:1127px;margin-right: auto; margin-left: auto;}
@@ -58,7 +59,6 @@ table.dataTable, table.dataTable th, table.dataTable td {box-sizing: border-box;
 .table-title {height: 32px;line-height: 28px;padding: 3px;font-size: 14px;font-weight: 600;margin-top: 0;}
 .table-title a{margin: 3px;}
 .ifShowDelete {position: relative;float: right;font-size: 12px;font-weight: normal; margin:0px 5px;}
-
 
 .combobox {width: 100%;height: 30px;padding: 2px 4px;font-size: 12px;line-height: 1.42857143;color: #333;background-color: #fff;background-image: none;border: 1px solid #ccc;border-radius: 4px;}
 .select-item {height:28px;vertical-align:middle;float: left;margin-right: 10px;position: relative;margin-top:10px; margin-bottom: 10px;}
@@ -141,7 +141,11 @@ span.caret-down{float: right; margin-top: 5px;border-left: 4px solid transparent
 .input-group-btn-vertical > .btn {display: block;width: 100%;max-width: 100%;margin-left: -1px;position: relative;}
 .input-group-btn-vertical > .btn:first-child {border-radius: 0px 5px 0px 0px;padding:0px 3px 5px 3px;}
 .input-group-btn-vertical > .btn:last-child {margin-top: -2px;border-radius: 0px 0px 4px 0px;padding:0px 3px 4px 3px;}
-
+.checkbox input[type=checkbox], .checkbox-inline input[type=checkbox], .radio input[type=radio], .radio-inline input[type=radio] {
+    position: absolute;
+    margin-top: 1px;
+    margin-left: -15px;
+}
 
 .checkbox-inline, .radio-inline input.sm{padding-top: 10px; bottom: 2px;height: inherit;}
 
